--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,6 +15,7 @@
     "baseUrl": ".", // Allow absolute imports relative to project root
     "paths": {
       "*": ["node_modules/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   }
 }
