--- a/frontend-customer/package.json
+++ b/frontend-customer/package.json
@@ -4,27 +4,51 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.23",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
+    "@expo/html-elements": "^0.4.2",
     "@expo/metro-runtime": "~4.0.0",
-    "expo-router": "~4.0.15",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "@gluestack-ui/actionsheet": "^0.2.46",
+    "@gluestack-ui/button": "^1.0.8",
+    "@gluestack-ui/icon": "^0.1.25",
+    "@gluestack-ui/image": "^0.1.11",
+    "@gluestack-ui/input": "^0.1.32",
+    "@gluestack-ui/modal": "^0.1.35",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.16",
+    "@gluestack-ui/select": "^0.1.30",
+    "@gluestack-ui/toast": "^1.0.8",
+    "@heroicons/react": "^2.2.0",
+    "@legendapp/motion": "^2.4.0",
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "expo": "~52.0.23",
+    "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
-    "expo-constants": "~17.0.3"
+    "expo-router": "~4.0.15",
+    "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.1.23",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-css-interop": "^0.1.22",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-web": "~0.19.13",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "jscodeshift": "^0.15.2",
     "typescript": "^5.3.3"
   },
   "private": true
