--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "^0.38.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "typescript": "^5.7.2",
     "zod": "^3.24.1"
