--- a/frontend-customer/package.json
+++ b/frontend-customer/package.json
@@ -26,7 +26,10 @@
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.2",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.23",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
@@ -37,11 +40,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-css-interop": "^0.1.22",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-reanimated": "^3.16.6",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17"
   },
